samples/_failures_safe/1761363886_c71e44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_416ec25a.c: In function ‘main’:
./samples/SAFE/__tmp_416ec25a.c:143:5: error: expected declaration or statement at end of input
  143 |     }
      |     ^
